infrastructure/modules/network/main.tf
resource "aws_vpc" "this" {
  cidr_block = var.vpc_cidr_block

  enable_dns_support   = true
  enable_dns_hostnames = true
  
  tags = {
    Name    ="VPC${var.name_tag}"
    Owner   ="${var.owner_tag}"
    Project  ="${var.project_tag}"
  }
}

resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name    ="IntGW${var.name_tag}"
    Owner   ="${var.owner_tag}"
    Project ="${var.project_tag}"
  }
}

resource "aws_subnet" "private" {
  count = length(var.private_subnets)

  vpc_id            = aws_vpc.this.id
  cidr_block        = var.private_subnets[count.index]
  availability_zone = var.azs[count.index]

tags = {
    Name    ="PR_SUBNET${var.name_tag}"
    Owner   ="${var.owner_tag}"
    Project ="${var.project_tag}"
  }
}

resource "aws_subnet" "public" {
  count = length(var.public_subnets)

  vpc_id            = aws_vpc.this.id
  cidr_block        = var.public_subnets[count.index]
  availability_zone = var.azs[count.index]

tags = {
    Name    ="PB_SUBNET${var.name_tag}"
    Owner   ="${var.owner_tag}"
    Project ="${var.project_tag}"
  }
}

resource "aws_eip" "this" {
  vpc = true

  tags = {
    Name    ="eip${var.name_tag}"
    Owner   ="${var.owner_tag}"
    Project ="${var.project_tag}"
  }
}

resource "aws_nat_gateway" "this" {
  allocation_id = aws_eip.this.id
  subnet_id     = aws_subnet.public[0].id

  tags = {
    Name    ="Nat${var.name_tag}"
    Owner   ="${var.owner_tag}"
    Project ="${var.project_tag}"
  }

  depends_on = [aws_internet_gateway.this]
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.this.id
  }

  tags = {
    Name    ="PR${var.name_tag}"
    Owner   ="${var.owner_tag}"
    Project ="${var.project_tag}"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this.id
  }

  tags = {
    Name    ="public${var.name_tag}"
    Owner   ="${var.owner_tag}"
    Project ="${var.project_tag}"
  }
}

resource "aws_route_table_association" "private" {
  count = length(var.private_subnets)

  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "public" {
  count = length(var.public_subnets)

  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}
